# JSON-CRAFTER

./: README.md  pyproject.toml
app/: main.py
app/models/: schemas.py
app/routes/: generate.py  transform.py
app/services/: llm.py
app/services/codegen/: __init__.py  base.py  csharp.py  go.py  java.py  kotlin.py  python.py  rust.py  typescript.py
